--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-media": "^1.9.2",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
