--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-REACT_APP_API_ENDPOINT=https://api.opendota.com
+REACT_APP_API_RATE_ENDPOINT=https://api.coindesk.com/v1/bpi/currentprice/USD.json
+REACT_APP_API_TRADE_ENDPOINT=http://webdeveloper.ee/trades.json
