--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "connected-react-router": "^6.5.2",
     "emotion-theming": "^10.0.14",
     "history": "^4.9.0",
-    "moment": "^2.22.2",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "node-sass": "^4.12.0",
     "polished": "^3.4.1",
     "prop-types": "^15.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-media": "^1.9.2",
+    "react-moment": "^0.9.2",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
