--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/core": "^10.0.16",
+    "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.15",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.3",
@@ -17,7 +17,7 @@
     "prop-types": "^15.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-media": "^1.9.2",
+    "react-media": "^1.10.0-alpha.1",
     "react-moment": "^0.9.2",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
@@ -58,11 +58,11 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^4.3.5",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.1.0",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "babel-plugin-emotion": "^10.0.16",
     "cross-env": "^5.2.1",
-    "eslint": "^6.2.2",
+    "eslint": "^6.1.0",
     "eslint-config-blvd": "^1.0.0",
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-jest": "^22.16.0",
